src/objects/ST_Global_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Fire_Assignment_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Fire Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Fire Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Validation_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Fire Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Workflow_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Fire Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>ST Global Settings</label>
</CustomObject>